2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* tests/test-scale.c: Improve test case for scaling (#684,
	Jaap A. Haitsma)

2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-timeline.c (timeline_timeout_func): Fix
	check if the last frame was reached by skipping a frame (#654,
	Johan Bilien)

2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-shader.c: Use correct format string for
	gssize. (#695, Tommi Komulainen)

2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/cogl/gl/cogl.c (cogl_get_proc_address): Implement non-GLX
	version using GModule and looking up the symbol from the running
	process. It should work when linked to library providing the
	requested function. (#696, Tommi Komulainen)

2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* configure.ac: Post-release bump to 0.5.3

	* README:
	* NEWS: Release 0.5.2

2008-01-14  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter.symbols: Add clutter_model_insertv()

	* clutter/clutter-model.[ch] (clutter_model_insertv): Add a vector
	based insertion API, for language bindings

2008-01-12  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-effect.c (clutter_effect_rotate): Make the
	rotate effect work on the passed axis, instead of hardcoding
	the X axis. (#700, Neil Roberts)

2008-01-10  Øyvind Kolås  <pippin@gimp.org>

	Added COGLhandleARB since the underlying type on OSX is void*,
	patch from Tommi Komulainen <tommi.komulainen@iki.fi>, (#694)

	* clutter/cogl/gl/cogl-defines.h.in: Added COGLhandleARB typedef.
	* clutter/cogl/cogl.h:
	* clutter/cogl/gl/cogl.c:
	* clutter/clutter-shader.c: Use COGLhandleARB instead of COGLint when
	referring to program or shader handles.

2008-01-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/Makefile.am:
	* clutter/clutter.h:
	* clutter/clutter-list-model.[ch]: Complete the ClutterModelDefault
	to ClutterListModel rename by renaming the source files
